# phosphor-state-manager

./: bmc_state_manager.cpp  bmc_state_manager.hpp  chassis_state_manager.cpp  chassis_state_manager.hpp  discover_system_state.cpp  host_reset_recovery.cpp  host_state_manager.cpp  host_state_manager.hpp  meson.build  meson.options  scheduled_host_transition.cpp  secure_boot_check.cpp  utils.cpp  utils.hpp
redundant-bmc/: README.md
redundant-bmc/src/: active_role_handler.cpp  active_role_handler.hpp  manager.cpp  manager.hpp  meson.build  passive_role_handler.cpp  passive_role_handler.hpp  persistent_data.cpp  persistent_data.hpp  providers.hpp  providers_impl.hpp  rbmc_manager_main.cpp  rbmc_tool.cpp  redundancy.cpp  redundancy.hpp  redundancy_interface.cpp  redundancy_interface.hpp  redundancy_mgr.cpp  redundancy_mgr.hpp  role_determination.cpp  role_determination.hpp  role_handler.hpp  services.hpp  services_impl.cpp  services_impl.hpp  sibling.hpp  sibling_impl.cpp  sibling_impl.hpp  sibling_reset.hpp  sibling_reset_impl.cpp  sibling_reset_impl.hpp  sync_interface.hpp  sync_interface_impl.cpp  sync_interface_impl.hpp  timer.hpp
redundant-bmc/test/: meson.build  persistent_data_test.cpp  redundancy_test.cpp  role_determination_test.cpp
service_files/: active-bmc-only.conf  meson.build  phosphor-broadcast-active-bmc-role.service  xyz.openbmc_project.State.BMC.Redundancy.service  xyz.openbmc_project.State.ScheduledHostTransition.service
target_files/: meson.build  obmc-bmc-active.target
